
- SimpleSwap can now be set an engine. If none was set, the old
  cash-flow-based calculation is used.

- Generalized McVanillaEngine so that it can manage n-dimensional processes;
  it now subsumes McHestonEngine.

- Added weight to short-rate model calibration (thanks to Enrico Michelotti.)

- Added pricing of Bermudan options on binomial trees (thanks to Enrico
  Michelotti.)

- Merged American and European option examples; added Bermudan option.
