@@ -46,11 +46,11 @@
     Akin, Sercan Atalik, James Battle, Christopher Baus, Thomas
     Becker, Adolfo Benin, Luca Berardi, David Binderman, Antoine
     Cellerier, Aurelien Chanudet, Jon Davidson, Daniele De Francesco,
-    Matteo Gallivanoni, Roman Gitlin, Tomoya Kawanishi, Gary Kennedy,
-    Enrico Michelotti, Gilbert Peffer, Walter Penschke, Gianni
-    Piolanti, Peter Schmitteckert, David Schwartz, Maxim Sokolov,
-    Klaus Spanderen, Marco Tarenghi, Charles Whitmore, Bernd Johannes
-    Wuebben, and Jeff Yu.
+    Piter Dias, Matteo Gallivanoni, Roman Gitlin, Tomoya Kawanishi,
+    Gary Kennedy, Enrico Michelotti, Gilbert Peffer, Walter Penschke,
+    Gianni Piolanti, Peter Schmitteckert, David Schwartz, Maxim
+    Sokolov, Klaus Spanderen, Marco Tarenghi, Charles Whitmore, Bernd
+    Johannes Wuebben, and Jeff Yu.
 
 */
 
